hphp/hack/test/typecheck/nameof/undefined_class.php
<?hh

function f(): void {
  nameof C;
}
